Support locale loading through URL hashes.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <link rel="icon" type="image/png" href="/favicon.png">
   <link href="/style.css" rel="stylesheet">
-  <script type="text/javascript" src="/qwest.min.js"></script>
+  <script type="text/javascript" src="/qwest.js"></script>
+  <script type="text/javascript" src="/history.js"></script>
   <script type="text/javascript" src="/vue.js"></script>
   <title>Localization</title>
 </head>
