--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" type="image/png" href="/favicon.png">
-  <link rel="stylesheet" type="text/css" href="/tippy.css">
-  <link rel="stylesheet" href="/style.css">
-  <script type="text/javascript" src="/qwest.js"></script>
-  <script type="text/javascript" src="/history.js"></script>
-  <script type="text/javascript" src="/vue.js"></script>
-  <script type="text/javascript"src="/tippy.js"></script>
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" type="text/css" href="tippy.css">
+  <link rel="stylesheet" href="style.css">
+  <script type="text/javascript" src="qwest.js"></script>
+  <script type="text/javascript" src="history.js"></script>
+  <script type="text/javascript" src="vue.js"></script>
+  <script type="text/javascript"src="tippy.js"></script>
   <title>Localization</title>
 </head>
 <body>
@@ -58,6 +58,6 @@
       </tr>
     </table>
   </div>
-  <script type="text/javascript" src="/app.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
