Use localStorage to save settings.

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="qwest.js"></script>
   <script type="text/javascript" src="history.js"></script>
+  <script type="text/javascript" src="store.js"></script>
   <script type="text/javascript" src="vue.js"></script>
   <script type="text/javascript"src="tippy.js"></script>
   <title>Localization</title>
