--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
     <div class="toolbar">
       <div>
         <select v-model="localeId" title="Current locale">
-          <option v-for="(info, locale) in status" v-if="showMissingLocales || info.exists" :value="locale">
+          <option v-for="(info, locale) in locales" v-if="showMissingLocales || info.exists" :value="locale">
             {{ locale }}: {{ info.name }}
           </option>
         </select>
@@ -31,13 +31,13 @@
         </label>
         <span v-if="localeId" class="stats">
           <span class="stat" title="Messages that have not been translated; they need translating">
-            <span class="missing">Missing</span> {{ status[localeId].missing.length }}
+            <span class="missing">Missing</span> {{ locales[localeId].missing.length }}
           </span>
           <span class="stat" title="Messages with English counterparts that changed since translation; the translation might need updating">
-            <span class="outdated">Outdated</span> {{ status[localeId].outdated.length }}
+            <span class="outdated">Outdated</span> {{ locales[localeId].outdated.length }}
           </span>
           <span class="stat" title="Messages that are identical to their English counterparts; they might need translating">
-            <span class="identical">Identical</span> {{ status[localeId].identical.length }}
+            <span class="identical">Identical</span> {{ locales[localeId].identical.length }}
           </span>
         </span>
       </div>
@@ -48,7 +48,7 @@
         <th>Message ID</th>
         <th>en: English</th>
         <th>State</th>
-        <th>{{ localeId }}: {{ status[localeId].name }}</th>
+        <th>{{ localeId }}: {{ locales[localeId].name }}</th>
       </tr>
       <tr v-for="(info, id) in filter(en.messages, messageFilter)" :class="{ identical: locale.identical.includes(id), outdated: locale.outdated.includes(id), missing: locale.missing.includes(id) }">
         <td class="id" :title="info.description">{{ id }}</td>
